--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 	<meta property="og:type"               content="article" />
 	<meta property="og:title"              content="Daily Dad Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/horse.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/horse.jpg" />	
 
     <title>Daily Dad Jokes 4U</title>
 
