--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,11 +7,11 @@
     <meta name="author" content="Blaize Stewart">	
 	<meta property="og:url"                content="http://www.dailydadjokes.net{{ page.url }}" />
 	<meta property="og:type"               content="article" />
-	<meta property="og:title"              content="Daily Dad Jokes 4U" />
+	<meta property="og:title"              content="Daily PIRATE Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/horse.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/pirate.jpg" />	
 
-    <title>Daily Dad Jokes 4U</title>
+    <title>Daily PIRATE Jokes 4U</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
