--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 	<meta property="og:type"               content="article" />
 	<meta property="og:title"              content="Daily PIRATE Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/pirate.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/pirates.jpg" />	
 
     <title>Daily PIRATE Jokes 4U</title>
 
@@ -25,7 +25,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand"><a href="/">Daily Dad Jokes 4U</a></h3>
+          <h3 class="masthead-brand"><a href="/">Daily PIRATE Jokes 4U</a></h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="https://www.twitter.com/theonemule">Twitter</a>
             <a class="nav-link" href="https://www.blaize.net/about">Contact</a>
