--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -155,7 +155,7 @@
 			FB.ui({
 				method: 'share',
 				href: 'http://www.dailydadjokes.net',
-				display: "iframe",
+				display: "page",
 				quote: document.getElementById("jokeBox").children[0].innerText
 			}, function(response){});		
 		}
