--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -156,7 +156,7 @@
 			FB.ui({
 				method: 'share',
 				href: 'http://www.dailydadjokes.net',
-				display: "page",
+				display: "dialog",
 				quote: document.getElementById("jokeBox").children[0].innerText
 			}, function(response){});		
 		}
