--- a/assets/cover.css
+++ b/assets/cover.css
@@ -4,7 +4,13 @@
 
 
  body {
-	background: center / contain no-repeat linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url("pumpkins.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)) , url("turkey.jpg");
+	background-color:#000000;
+	
 	 
  }
 
