--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
           <h3 class="masthead-brand"><a href="/">Daily Thanksgiving Jokes 4U</a></h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="https://www.twitter.com/theonemule">Twitter</a>
-            <a class="nav-link" href="https://www.blaize.net/about">Contact</a>
+            <a class="nav-link" href="https://www.blaize.net/contact">Contact</a>
           </nav>
         </div>
       </header>
