--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,11 +7,11 @@
     <meta name="author" content="Blaize Stewart">	
 	<meta property="og:url"                content="http://www.dailydadjokes.net{{ page.url }}" />
 	<meta property="og:type"               content="article" />
-	<meta property="og:title"              content="Daily Thanksgiving Jokes 4U" />
+	<meta property="og:title"              content="Daily Christmas Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/turkey.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/christmas.jpg" />	
 
-    <title>Daily Thanksgiving Jokes 4U</title>
+    <title>Daily Christmas Jokes 4U</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand"><a href="/">Daily Thanksgiving Jokes 4U</a></h3>
+          <h3 class="masthead-brand"><a href="/">Daily Christmas Jokes 4U</a></h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="https://www.twitter.com/theonemule">Twitter</a>
             <a class="nav-link" href="https://www.blaize.net/contact">Contact</a>
