Chuck Fucking Norris!

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Blaize Stewart">	
 	<meta property="og:url"                content="http://www.dailydadjokes.net{{ page.url }}" />
 	<meta property="og:type"               content="article" />
-	<meta property="og:title"              content="Daily Christmas Jokes 4U" />
+	<meta property="og:title"              content="Daily Chuck Norris Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/christmas.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/chuck.png" />	
 
     <title>Daily Christmas Jokes 4U</title>
 
@@ -25,7 +25,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand"><a href="/">Daily Christmas Jokes 4U</a></h3>
+          <h3 class="masthead-brand"><a href="/">Daily Chuck Norris Jokes 4U</a></h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="https://www.twitter.com/theonemule">Twitter</a>
             <a class="nav-link" href="https://www.blaize.net/contact">Contact</a>
