--- a/assets/cover.css
+++ b/assets/cover.css
@@ -8,7 +8,7 @@
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)) , url("zelensky.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)) , url("monkey.jpg");
 	background-color:#000000;
 	
 	 
