--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,12 @@
     <meta name="author" content="Blaize Stewart">	
 	<meta property="og:url"                content="http://www.dailydadjokes.net{{ page.url }}" />
 	<meta property="og:type"               content="article" />
-	<meta property="og:title"              content="Daily Programmer Jokes 4U" />
+	<meta property="og:title"              content="Daily 4th of July Jokes 4U" />
 	<meta property="og:description"        content="{{ content }}" />
-	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/monkey.jpg" />	
+	<meta property="og:image"              content="http://www.dailydadjokes.net/assets/usa.jpg" />	
 
 
-    <title>Daily  Programmer Jokes 4U</title>
+    <title>Daily  4th of July Jokes 4U</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand"><a href="/">Daily  Programmer Jokes 4U</a></h3>
+          <h3 class="masthead-brand"><a href="/">Daily  4th of July Jokes 4U</a></h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="https://www.twitter.com/theonemule">Twitter</a>
             <a class="nav-link" href="https://www.blaize.net/contact">Contact</a>
