--- a/site/_layouts/home.html
+++ b/site/_layouts/home.html
@@ -171,7 +171,7 @@
 	}	
 	
 	const pageUrl = "{{ site.posts.first.url }}";
-	const apiUrl = "http://localhost:7071/api/";
+		const apiUrl = "/api/";
 	
 	window.onload = function() {
 		getRating();
