--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -172,7 +172,7 @@
 	}
 	
 	const pageUrl = "{{ page.url }}";
-	const apiUrl = "http://localhost:7071/api/";
+	const apiUrl = "/api/";
 	
 	window.onload = function() {
 		getRating();
